--- a/styles/style.css
+++ b/styles/style.css
@@ -44,7 +44,9 @@
   font-weight: bold;
 }
 
-/* Add the hover state styles for .nav__link here */
+.nav__link:hover {
+  color: #1f69c9;
+}
 
 .header__title {
   font-size: 66px;
@@ -62,6 +64,9 @@
 }
 
 .header__image {
+  position: absolute;
+  top: 135px;
+  right: 20px;
   max-width: 636px;
   z-index: 1;
 }
@@ -83,7 +88,9 @@
   text-decoration: none;
 }
 
-/* Add the hover state styles for .header__link here */
+.header__link:hover {
+  color: #1f69c9;
+}
 
 .header__address {
   margin: 0;
@@ -111,7 +118,16 @@
   margin: 24px 0 0;
 }
 
-/* Add the CSS rule for your new class here. Make sure to place it before .card: parents should precede their children */
+.staff__container {
+  display: flex;
+  max-width: 760px;
+  margin: 68px auto 0px auto;
+  padding-left: 0px;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  gap: 40px;
+  list-style: none;
+}
 
 .card {
   background-color: #fff;
@@ -224,7 +240,9 @@
   text-decoration: none;
 }
 
-/* Add the hover state styles for .events__more here */
+.events__more:hover {
+  color: #1f69c9;
+}
 
 .events__cover {
   flex-grow: 1;
@@ -313,11 +331,14 @@
   list-style-type: none;
   padding: 0;
   margin: 100px 0 0;
-  /* Add styles */
+  display: flex;
+  flex-basis: auto;
+  justify-content: center;
+  gap: 40px;
 }
 
 .step {
-  /* Add styles */
+  width: 220px;
 }
 
 .step__title {
@@ -344,6 +365,8 @@
   overflow: hidden;
   position: relative;
   box-sizing: border-box;
+  display: flex;
+  column-gap: 120px;
 }
 
 .about__title {
@@ -358,48 +381,79 @@
 .about__content {
   font-size: 20px;
   line-height: 30px;
-  font-weight: 400;
+  font-weight: 400px;
+  gap: 32px;
   max-width: 660px;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  z-index: 2;
 }
 
 .about__paragraph {
   margin: 0;
+  display: flex;
 }
 
 .about__circle {
+  display: flex;
   background-color: #2f80ed;
   width: 495px;
   height: 495px;
   border-radius: 50%;
+  z-index: 0;
+  position: absolute;
+  top: -121px;
+  left: -91px;
 }
 
 .footer {
   box-sizing: border-box;
+  background-color: #1f1f1f;
 }
 
 .footer__columns {
+  display: flex;
+  color: white;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 60px 102px 60px 80px;
+  min-height: 224px;
+  column-gap: 100px;
 }
 
 .footer__column_content_hours {
+  display: flex;
+  flex-direction: column;
+  margin-left: auto;
 }
 
 .footer__column_content_social {
+  display: flex;
+  flex-direction: column;
+  margin: 0;
 }
 
 .footer__logo {
 }
 
 .footer__list {
-  /* The code below removes the default browser styles for lists */
   list-style-type: none;
   padding: 0;
   margin: 0;
 }
 
 .footer__list-item {
+  margin: 0;
+  display: flex;
+  padding-bottom: 16px;
+  gap: 5px;
 }
 
 .footer__column-heading {
+  color: white;
+  padding-bottom: 20px;
+  margin: 0;
 }
 
 .footer__column-link {
@@ -409,8 +463,17 @@
   text-decoration: none;
 }
 
+.footer__column-link:hover {
+  color: #c1c1c1;
+}
+
 .footer__social-icon {
+  width: 16px;
+  height: 16px;
 }
 
 .footer__copyright {
+  display: flex;
+  position: relative;
+  bottom: -215px;
 }
