--- a/styles/style.css
+++ b/styles/style.css
@@ -27,6 +27,8 @@
 .logo {
   width: 196px;
   height: 60px;
+  position: relative;
+  z-index: 1;
 }
 
 .nav__links {
@@ -54,6 +56,8 @@
   font-weight: 500;
   margin: 150px 0 0;
   max-width: 544px;
+  position: relative;
+  z-index: 2;
 }
 
 .header__description {
@@ -61,6 +65,8 @@
   line-height: 30px;
   margin: 32px 0 0;
   max-width: 465px;
+  position: relative;
+  z-index: 2;
 }
 
 .header__image {
