--- a/styles/style.css
+++ b/styles/style.css
@@ -462,6 +462,9 @@
   font-size: 16px;
   line-height: 20px;
   text-decoration: none;
+  display: flex;
+  align-items: center;
+  gap: 4px;
 }
 
 .footer__column-link:hover {
